CASL-1705: make DefaulteStorageHandler extensible.
Signed-off-by: Marcin-Here <ext-marcin.grabowski@here.com>